--- a/DoubleA/DoubleA/DoubleA.csproj
+++ b/DoubleA/DoubleA/DoubleA.csproj
@@ -23,6 +23,9 @@
     <EmbeddedResource Update="AnilistLoginPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="AnimeDetailsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="ListViewPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
